--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -15,7 +15,7 @@ jobs:
 
     name: Benchmark
     # Only run if it#s a PR and the comment contains /Benchmark
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/Benchmark') && contains('["vwxyzjn", "younesbelkada", "lvwerra"]', github.actor)
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/benchmark-core-trl-experiments') && contains('["vwxyzjn", "younesbelkada", "lvwerra"]', github.actor)
     runs-on: ${{ matrix.os }}
 
     steps:
