Update benchmark.yml (#777)

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -41,6 +41,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Cleanup pip packages (specific to self-hosted runners)
         run: |
+          echo PATH is $PATH
+          echo PYTHONPATH is $PYTHONPATH
+          echo which python is $(which python)
+          echo which pip is $(which pip)
+
           pip_list=$(pip list --format=freeze)
           if [ ! -z "$pip_list" ]; then
               echo "$pip_list" | xargs pip uninstall -y
